--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -30,7 +30,6 @@
   font-weight: 500;
   font-size: 32px;
   line-height: 32px;
-  height: 96px;
   letter-spacing: 0%;
   margin: 0 0 12px;
   color: rgba(33, 33, 33, 1);
